添加setBindKeysBefore、setBindKeysAfter函数，用于上层应用自己的事件绑定

--- a/src/headless/tsconfig.json
+++ b/src/headless/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../tsconfig-library-base",
   "compilerOptions": {
+    "target": "ES5",
     "lib": [
-      "es2015",
-      "es2016.Array.Include"
     ],
     "outDir": "../../out",
     "types": [
@@ -12,7 +11,9 @@
     ],
     "baseUrl": "../",
     "paths": {
-      "common/*": [ "./common/*" ]
+      "common/*": [
+        "./common/*"
+      ]
     }
   },
   "include": [
@@ -21,6 +22,8 @@
     "../../typings/xterm-headless.d.ts"
   ],
   "references": [
-    { "path": "../common" }
+    {
+      "path": "../common"
+    }
   ]
 }
