--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../tsconfig-library-base",
   "compilerOptions": {
+    "target": "ES5",
     "lib": [
-      "dom",
-      "es2021"
+      "dom"
     ],
     "outDir": "../../out",
     "types": [
@@ -11,7 +11,9 @@
     ],
     "baseUrl": "..",
     "paths": {
-      "common/*": [ "./common/*" ]
+      "common/*": [
+        "./common/*"
+      ]
     }
   },
   "include": [
@@ -19,6 +21,8 @@
     "../../typings/xterm.d.ts"
   ],
   "references": [
-    { "path": "../common" }
+    {
+      "path": "../common"
+    }
   ]
 }
