--- a/tsconfig.all.json
+++ b/tsconfig.all.json
@@ -7,16 +7,16 @@
     { "path": "./test/api" },
     { "path": "./test/benchmark" },
     { "path": "./test/playwright" },
-    { "path": "./addons/xterm-addon-attach" },
-    { "path": "./addons/xterm-addon-canvas" },
-    { "path": "./addons/xterm-addon-fit" },
-    { "path": "./addons/xterm-addon-image" },
-    { "path": "./addons/xterm-addon-ligatures" },
-    { "path": "./addons/xterm-addon-search" },
-    { "path": "./addons/xterm-addon-serialize" },
-    { "path": "./addons/xterm-addon-unicode11" },
-    { "path": "./addons/xterm-addon-unicode-graphemes" },
-    { "path": "./addons/xterm-addon-web-links" },
-    { "path": "./addons/xterm-addon-webgl" }
+    // { "path": "./addons/xterm-addon-attach" },
+    // { "path": "./addons/xterm-addon-canvas" },
+    // { "path": "./addons/xterm-addon-fit" },
+    // { "path": "./addons/xterm-addon-image" },
+    // { "path": "./addons/xterm-addon-ligatures" },
+    // { "path": "./addons/xterm-addon-search" },
+    // { "path": "./addons/xterm-addon-serialize" },
+    // { "path": "./addons/xterm-addon-unicode11" },
+    // { "path": "./addons/xterm-addon-unicode-graphemes" },
+    // { "path": "./addons/xterm-addon-web-links" },
+    // { "path": "./addons/xterm-addon-webgl" }
   ]
 }
