--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "ES5",
     "lib": [
-      "dom"
+      "dom",
+      "ES2021"
     ],
     "outDir": "../../out",
     "types": [
