--- a/addons/addon-canvas/package.json
+++ b/addons/addon-canvas/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-canvas",
-  "version": "0.5.0",
+  "name": "teamide-xterm-addon-canvas",
+  "version": "0.5.3",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -16,13 +16,13 @@
     "xterm.js"
   ],
   "scripts": {
-    "build": "../../node_modules/.bin/tsc -p .",
+    "build": "..\\..\\node_modules\\.bin\\tsc -p .",
     "prepackage": "npm run build",
-    "package": "../../node_modules/.bin/webpack",
+    "package": "..\\..\\node_modules\\.bin\\webpack",
     "prepublishOnly": "npm run package",
-    "start-server-only": "node ../../demo/start-server-only"
+    "start-server-only": "node ..\\..\\demo\\start-server-only"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 }
