--- a/addons/addon-canvas/src/tsconfig.json
+++ b/addons/addon-canvas/src/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2021",
+    "target": "ES5",
     "lib": [
       "dom",
-      "es2021"
+      "ES2021"
     ],
     "rootDir": ".",
     "outDir": "../out",
