--- a/addons/addon-fit/package.json
+++ b/addons/addon-fit/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-fit",
-  "version": "0.8.0",
+  "name": "teamide-xterm-addon-fit",
+  "version": "0.8.3",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -15,12 +15,12 @@
     "xterm.js"
   ],
   "scripts": {
-    "build": "../../node_modules/.bin/tsc -p .",
+    "build": "..\\..\\node_modules\\.bin\\tsc -p .",
     "prepackage": "npm run build",
-    "package": "../../node_modules/.bin/webpack",
+    "package": "..\\..\\node_modules\\.bin\\webpack",
     "prepublishOnly": "npm run package"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 }
