--- a/addons/addon-image/package.json
+++ b/addons/addon-image/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-image",
-  "version": "0.6.0",
+  "name": "teamide-xterm-addon-image",
+  "version": "0.6.1",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -22,7 +22,7 @@
     "prepublishOnly": "npm run package"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.2.0"
+    "teamide-xterm": "^5.3.0"
   },
   "devDependencies": {
     "sixel": "^0.16.0",
