--- a/addons/addon-ligatures/package.json
+++ b/addons/addon-ligatures/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-ligatures",
-  "version": "0.7.0",
+  "name": "teamide-xterm-addon-ligatures",
+  "version": "0.7.1",
   "description": "Add support for programming ligatures to xterm.js",
   "author": {
     "name": "The xterm.js authors",
@@ -42,6 +42,6 @@
     "yauzl": "^2.10.0"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 }
