--- a/addons/addon-search/package.json
+++ b/addons/addon-search/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-search",
-  "version": "0.13.0",
+  "name": "teamide-xterm-addon-search",
+  "version": "0.13.3",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -15,11 +15,12 @@
     "xterm.js"
   ],
   "scripts": {
-    "prepackage": "../../node_modules/.bin/tsc -p .",
-    "package": "../../node_modules/.bin/webpack",
+    "build": "..\\..\\node_modules\\.bin\\tsc -p .",
+    "prepackage": "..\\..\\node_modules\\.bin\\tsc -p .",
+    "package": "..\\..\\node_modules\\.bin\\webpack --progress",
     "prepublishOnly": "npm run package"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 }
