--- a/addons/addon-serialize/package.json
+++ b/addons/addon-serialize/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-serialize",
-  "version": "0.11.0",
+  "name": "teamide-xterm-addon-serialize",
+  "version": "0.11.1",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -24,6 +24,6 @@
     "benchmark-eval": "NODE_PATH=../../out:./out:./out-benchmark/ ../../node_modules/.bin/xterm-benchmark -r 5 -c benchmark/benchmark.json --eval out-benchmark/benchmark/*benchmark.js"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 }
