--- a/addons/addon-web-links/package.json
+++ b/addons/addon-web-links/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xterm/addon-web-links",
-  "version": "0.9.0",
+  "name": "teamide-xterm-addon-web-links",
+  "version": "0.9.1",
   "author": {
     "name": "The xterm.js authors",
     "url": "https://xtermjs.org/"
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run package"
   },
   "peerDependencies": {
-    "@xterm/xterm": "^5.0.0"
+    "teamide-xterm": "^5.3.0"
   }
 
 }
